# tmpl

./: README.md  tmpl
include/m4/: utils.m4
include/scripts/: checks  diagnostics  tmpl
types/cfile/: tmplfile  tmplrun
types/cfile/templates/: main.c
types/clib/: macros.m4  tmplfile  tmplrun
types/clib/templates/: CMakeLists.txt  lib.c  lib.h
types/cmake/: tmplrun
types/cmake/templates/: CMakeLists.txt
types/cmod/: macros.m4  tmplfile  tmplrun
types/cmod/templates/: module.c  module.h
types/ctags/: tmplrun
types/docker/: tmplrun
types/docker/templates/: .dockerignore  Dockerfile  docker-compose.yml
types/frontend/: tmplrun
types/frontend/templates/: Makefile  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
types/frontend/templates/src/: MyModule.ts  index.html  main.ts
types/frontend/templates/src/styles/: main.styl  stack_list.styl
types/ignore/: tmplrun
types/ignore/templates/: .gitignore
types/make/: tmplrun
types/make/templates/: Makefile
types/makec/: tmplrun
types/makec/templates/: Makefile  main.c
types/makedot/templates/: Makefile
types/md/: macros.m4  tmplrun
types/md/templates/: README.md
types/react/: tmplrun
types/react/templates/: package.json
types/sh/: tmplrun
types/sh/templates/: script
types/type/: tmplrun
